@@ -396,6 +396,7 @@ CVS code -
 	- Update section 3.8 to mention the new "Unicode Input" prompt,
 	  and how Unicode input only works when Unicode support is
 	  enabled. (DLR)
+	- Add minor punctuation and wording fixes. (DLR)
 - doc/nano.1:
 	- Update the copyright years to include 2006. (DLR)
 	- Explicitly mention that all regexes should be extended regular
